# inmoov_ros

./: .gitignore  README.md  build_and_source.sh  display_launch.py
inmoov_bringup/: CMakeLists.txt  package.xml
inmoov_bringup/launch/: bringup.launch.py
inmoov_bringup/nodes/: export_yaml.py  joint_command_dispatcher.py  joint_status_dispatcher.py  motor_status_dispatcher.py
inmoov_bringup/scripts/: generate_config_xacro.py  generate_export_yaml_from_eeprom.py
inmoov_bringup/tools/enable_manager/: enable_manager.py
inmoov_bringup/tools/rviz_manager/: rviz_manager.py
inmoov_bringup/tools/trainer/: trainer.py
inmoov_description/: CMakeLists.txt  package.xml
inmoov_description/launch/: display.launch  display.launch.py
inmoov_description/urdf/: config.joints.urdf.xacro
inmoov_firmware/: TeensyServo.cpp  TeensyServo.h
inmoov_firmware2/: CMakeLists.txt  LICENSE.txt  inmoov_firmware2.ino  package.xml
inmoov_meshes/: CMakeLists.txt  package.xml
inmoov_msgs/: CMakeLists.txt  package.xml
inmoov_msgs/msg/: ServoCommand.msg
inmoov_tools/look/: look.py
