<package format="3">
  <name>inmoov_bringup</name>
  <version>0.1.0</version>
  <description>
    Bringup launch files and configurations for InMoov robot.
  </description>
  <maintainer email="supertick@gmail.com">Greg Perry</maintainer>

  <license>BSD</license>

  <url type="website">https://discord.gg/8NYKAUTxmZ</url>
  <url type="bugtracker">https://github.com/MyRobotLab/myrobotlab/issues</url>

  <author>Greg Perry</author>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>inmoov_msgs</depend>
  <depend>inmoov_description</depend>
  <depend>robot_state_publisher</depend>
  <depend>rviz2</depend>
  <depend>python_qt_binding</depend>
  <!-- <depend>micro_ros_agent</depend> -->

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
