<?xml version="1.0"?>
<package format="3">
  <name>inmoov_meshes</name>
  <version>0.1.0</version>
  <description>Meshes for the InMoov robot</description>
  <maintainer email="supertick@gmail.com">Greg Perry</maintainer>
  <license>BSD</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>ament_index_cpp</exec_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
