<package format="3">
  <name>inmoov_msgs</name>
  <version>0.1.0</version>
  <description>
    Common messages used throughout inmoov_motor stack.
  </description>
  <maintainer email="supertick@gmail.com">Greg Perry</maintainer>

  <license>BSD</license>

  <url type="website">https://discord.gg/8NYKAUTxmZ</url>
  <url type="bugtracker">https://github.com/MyRobotLab/myrobotlab/issues</url>

  <author>Greg Perry</author>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <depend>builtin_interfaces</depend>
  <depend>rosidl_default_generators</depend>
  <depend>rosidl_default_runtime</depend>
  <depend>std_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
    <member_of_group>rosidl_interface_packages</member_of_group>
  </export>
</package>
